Support for GPD and PHASENET added. Check the bin folder for wrappers. Images uploaded on DockerHub

--- a/eqt_conda_tf2_gpu/Dockerfile
+++ b/eqt_conda_tf2_gpu/Dockerfile
@@ -1,12 +1,13 @@
-FROM nvidia/cuda:11.0-devel
+FROM nvidia/cuda:10.0-devel
 
-# FROM nvidia/cuda:10.1-devel
-# FROM 11.2.1-cudnn8-devel-ubuntu18.04
-# FROM nvidia/cuda:11.2.0-devel-ubuntu18.04
+# ---------- UPDATE TOOLS
+# ------------------------------
 
-RUN  apt-get update && apt-get install -y less nano byobu vim bsdmainutils wget git unzip
+RUN  apt-get update && apt-get install -y less nano vim bsdmainutils git wget
+# possible add on wget / unzip / byobu
 
-# ---------- Install miniconda3 + PHASENET environment
+# ---------- INSTALL MINICONDA3
+# ------------------------------
 RUN mkdir -p /root/miniconda3
 RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh \
             -O /root/miniconda3/miniconda.sh
@@ -15,18 +16,36 @@ RUN rm -rf /root/miniconda3/miniconda.sh
 COPY BASHRC.conf /root/.bashrc
 RUN /root/miniconda3/bin/conda init bash
 
-# ----------  Install GPD (conda env+pip)
-RUN git clone https://github.com/smousavi05/EQTransformer /eqt &&\
-    cd /eqt && git checkout 5524b75bfebb3bddf52265356489cce6b9513181 -b working_branch &&\
-    rm -rf /eqt/.git*
+# ---------- CREATE ENV EQT
+# ------------------------------
 
-# Create env PHASENET
-COPY eqt_tf2_env.yml eqt_tf2_env.yml
-COPY setup.py /eqt/setup.py
-COPY requirements.txt /eqt/requirements.txt
-RUN /root/miniconda3/bin/conda-env create -f eqt_tf2_env.yml
+COPY eqt_tf2_env.PIP.yml eqt_tf2_env.PIP.yml
+RUN /root/miniconda3/bin/conda-env create -f eqt_tf2_env.PIP.yml
+
+# ---------- DOWNLOAD MODELs
+# ------------------------------
+
+RUN git clone https://github.com/smousavi05/EQTransformer /eqt &&\
+    cd /eqt && git checkout 5524b75bfebb3bddf52265356489cce6b9513181 -b working_branch
+RUN mv /eqt/ModelsAndSampleData .
+RUN rm -rf /eqt
+
+# ---------- FINAL ADJUSTMENT
+# ------------------------------
+
+# bashrc
 RUN echo "conda activate eqt" >> /root/.bashrc
 
 # Copy modified script
-COPY test_eqt.py  /test_eqt.py
+COPY test_eqt_GPU.py  /test_eqt.py
 RUN chmod 766 /test_eqt.py
+
+
+COPY entrypoint_pip_eqt.py /entrypoint_pip_eqt.py
+RUN chmod 766 /entrypoint_pip_eqt.py
+
+ENTRYPOINT ["/entrypoint_pip_eqt.py"]
+
+
+# *** Finished the prediction in: 0 hours and 1 minutes and 42.28 seconds. ONLYCPU
+# vi /root/miniconda3/envs/eqt/lib/python3.7/site-packages/EQTransformer/core/predict.py
